v1.1 add modify article function
